src/main/java/org/example/liskov/substitution/good/HomeLoan.java
package org.example.liskov.substitution.good;

public class HomeLoan implements SecureLoanPayment{
    @Override
    public void payLoan() {

    }


    @Override
    public void forceCloseLoan() {

    }
}
