src/main/java/org/example/liskov/substitution/bad/HomeLoan.java
package org.example.liskov.substitution.bad;

public class HomeLoan implements  LoanPayment{
    @Override
    public void payLoan() {

    }

    @Override
    public void forceCloseLoan() {

    }

    @Override
    public void repayLoan() {

    }
}
